<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal|center_vertical">

    <!---Text View add transaction-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/prompt_add_transaction"/>

    <!---Amount Label-->     <!---Amount EditableText Field-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:text="@string/prompt_amount"/>

        <EditText
            android:id="@+id/amountEntry"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/transaction_amount_hint" />




    </LinearLayout>
    <!---Select Categories drop down list-->

    <EditText
        android:id="@+id/transaction_name"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/transaction_name_hint" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/selected_category_names"/>
    <Spinner
        android:id="@+id/category_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/default_categories"
        >


    </Spinner>
    <!---OK Button - code based positive button-->    <!---Cancel Button - code based negative button-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/add_transaction_ok"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/button_ok"/>
        <Button
            android:id="@+id/add_transaction_cancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/button_cancel"/>



    </LinearLayout>



</LinearLayout>