<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal|center_vertical"
    android:background="@color/dialog_background"
    android:orientation="vertical"
    android:weightSum="2">

    <!---Text View categories title-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/categories_dialog_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_weight="1"
            android:clipToPadding="false"
            android:fillViewport="false"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:scrollbarStyle="insideInset">

            <RadioGroup
                android:id="@+id/radio_group_category_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </RadioGroup>
        </ScrollView>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/new_category_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/add_new_category" />

        <Button
            android:id="@+id/button_rename_category"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:drawable/menuitem_background"
            android:backgroundTint="@color/dialog_button"
            android:text="@string/rename_category" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_add_category"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:drawable/menuitem_background"
            android:backgroundTint="@color/dialog_button"
            android:text="@string/button_add" />

        <Button
            android:id="@+id/button_remove_category"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:drawable/menuitem_background"
            android:backgroundTint="@color/dialog_button"
            android:text="@string/button_remove" />

        <Button
            android:id="@+id/button_cancel"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.9"
            android:background="@android:drawable/menuitem_background"
            android:backgroundTint="@color/dialog_button"
            android:text="@string/button_cancel" />

    </LinearLayout>

</LinearLayout>