<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/spacer_button"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="48dp" />

        <Button
            android:id="@+id/dropdown_menu_title"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/bottom_bar"
            android:backgroundTint="@color/menu_color_1"
            android:clickable="false"
            android:text="@string/dropdown_menu_title"
            android:textAlignment="center"
            android:textStyle="bold"
            android:theme="@style/AppTheme.Button" />

        <Button
            android:id="@+id/dropdown_menu_add"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="@android:drawable/bottom_bar"
            android:backgroundTint="@color/menu_color_2"
            android:paddingLeft="16dp"
            android:text="@string/dropdown_menu_add"
            android:textAlignment="textStart"
            android:theme="@style/AppTheme.Button" />

        <Button
            android:id="@+id/dropdown_menu_categories"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="@android:drawable/bottom_bar"
            android:backgroundTint="@color/menu_color_2"
            android:paddingLeft="16dp"
            android:text="@string/dropdown_menu_categories"
            android:textAlignment="textStart"
            android:theme="@style/AppTheme.Button" />

        <Button
            android:id="@+id/dropdown_menu_limits"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="@android:drawable/bottom_bar"
            android:backgroundTint="@color/menu_color_2"
            android:paddingLeft="16dp"
            android:text="@string/dropdown_menu_limits"
            android:textAlignment="textStart"
            android:theme="@style/AppTheme.Button" />

        <Button
            android:id="@+id/dropdown_menu_profiles"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="@android:drawable/bottom_bar"
            android:backgroundTint="@color/menu_color_2"
            android:paddingLeft="16dp"
            android:text="@string/dropdown_menu_profiles"
            android:textAlignment="textStart"
            android:theme="@style/AppTheme.Button" />

        <Button
            android:id="@+id/dropdown_menu_exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="@android:drawable/bottom_bar"
            android:backgroundTint="@color/menu_color_2"
            android:paddingLeft="16dp"
            android:text="@string/dropdown_menu_exit"
            android:textAlignment="textStart"
            android:theme="@style/AppTheme.Button" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>