<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal|center_vertical"
    tools:context="edu.csuci.myci.cashflow.EditTransactionFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        android:layout_margin="10dp">

        <TextView
            style="android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/transaction_title_label" />

        <EditText
            android:id="@+id/transaction_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:hint="@string/transaction_name_hint" />

        <TextView
            style="android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/transaction_amount_label" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/sign_button_edit"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:background="@android:drawable/menuitem_background"
                android:backgroundTint="@color/dialog_button"
                android:text="+/-" />

            <EditText
                android:id="@+id/transaction_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"

                android:hint="@string/transaction_amount_hint"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <Button
            android:id="@+id/transaction_date"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@android:drawable/menuitem_background"
            android:backgroundTint="@color/dialog_button"
            android:textAlignment="textStart" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/edit_transaction_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

        </android.support.v7.widget.RecyclerView>

        <Spinner
            android:id="@+id/edit_transaction_category_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp">

        </Spinner>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/edit_transaction_cancel"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@android:drawable/menuitem_background"
                android:backgroundTint="@color/dialog_button"
                android:text="@string/button_cancel" />

            <Button
                android:id="@+id/edit_transaction_ok"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@android:drawable/menuitem_background"
                android:backgroundTint="@color/dialog_button"
                android:text="@string/button_ok" />

        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>