<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom|right">

    <LinearLayout
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/sort_by_date"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/bottom_bar"
            android:backgroundTint="@color/menu_color_2"
            android:paddingLeft="16dp"
            android:text="@string/list_item_date"
            android:textAlignment="textStart" />

        <Button
            android:id="@+id/sort_by_category"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/bottom_bar"
            android:backgroundTint="@color/menu_color_2"
            android:paddingLeft="16dp"
            android:text="@string/list_item_category"
            android:textAlignment="textStart" />

        <Button
            android:id="@+id/sort_by_amount"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/bottom_bar"
            android:backgroundTint="@color/menu_color_2"
            android:paddingLeft="16dp"
            android:text="@string/list_item_amount"
            android:textAlignment="textStart" />

        <Button
            android:id="@+id/button_invisible"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="44dp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>