<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.csuci.myci.cashflow.ListViewFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">



        <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/transaction_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".75">


        </android.support.v7.widget.RecyclerView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/add_transaction_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:background="@android:drawable/bottom_bar"
                android:backgroundTint="@color/menu_color_2"
                android:padding="8dp"
                android:text="@string/button_add"
                android:textAlignment="center"
                android:textSize="18sp" />

            <Button
                android:id="@+id/remove_transaction_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:background="@android:drawable/bottom_bar"
                android:backgroundTint="@color/menu_color_2"
                android:padding="8dp"
                android:text="@string/button_remove"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="monospace" />

            <Button
                android:id="@+id/edit_transaction"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:background="@android:drawable/bottom_bar"
                android:backgroundTint="@color/menu_color_2"
                android:padding="8dp"
                android:text="@string/button_edit_transaction"
                android:textAlignment="center" />

            <Button
                android:id="@+id/sort_list_spinner"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.25"
                android:background="@android:drawable/bottom_bar"
                android:backgroundTint="@color/menu_color_2"
                android:padding="8dp"
                android:text="@string/sort_by"
                android:textAlignment="center" />
        </LinearLayout>


    </LinearLayout>
</android.support.constraint.ConstraintLayout>
